package week_02;

public interface Promotion {
    int getDiscountAmount();
}
